--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ chrono = { version = "0.4.26", features = ["serde"] }
 sea-orm = { version = "0.11.3", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
 futures = { version = "0.3.28" }
 dotenv = { version = "0.15.0" }
+async-trait = "0.1.72"
